--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "038b6aed-1da6-485e-8bcb-cc0f669df5c3",
+   "metadata": {},
+   "source": [
+    "<h1>Exploratory Data Analysis<h1>\n",
+    "\n",
+    "In this code, we try to induce Exploration Data Analysis for SeoulSpeed dataset https://github.com/yuyolshin/SeoulSpeedData, since pattern on each road segment is almost same, we decided to take an average speed for all street segment as dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "825265f5-336c-43f7-a8ed-962f4b1a2f6d",
