add readme to linear regression code

--- a/linear-regression.ipynb
+++ b/linear-regression.ipynb
@@ -1,6 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "96678c21-48f8-457a-82ff-51ea86da9117",
+   "metadata": {},
+   "source": [
+    "<h1>Linear Regression<h1>\n",
+    "\n",
+    "In this notebook, we try to perform linear regression on SeoulSpeed dataset https://github.com/yuyolshin/SeoulSpeedData"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e32bb65-8e95-42ad-9917-34cae451cfb2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "<blockquote>Define dataset file path</blockquote>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "88459647-53af-4234-b5d6-93206dcbc0a3",
@@ -11,6 +31,14 @@
     "ADJ_URBAN_CORE_CSV = 'Adj(urban-core).csv'\n",
     "URBAN_MIX_CSV = 'urban-mix.csv'\n",
     "ADJ_URBAN_MIX_CSV = 'Adj(urban-mix).csv'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "194573ad-04ce-4215-907a-481a12b26c03",
+   "metadata": {},
+   "source": [
+    "<blockquote>Import necessary library</blockquote>"
    ]
   },
   {
@@ -26,6 +54,14 @@
     "import numpy as np\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.metrics import mean_squared_error, r2_score"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "654513cb-0ada-449c-8ba5-9141d3ca82cf",
+   "metadata": {},
+   "source": [
+    "<blockquote>Preprocess data frame from csv, train model, and plot result</blockquote>"
    ]
   },
   {
@@ -139,11 +175,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9aa126ed-2430-4bf2-9363-0093dee65b80",
+   "cell_type": "markdown",
+   "id": "6eb06e06-eb38-4ea2-b79f-fa63fd27decd",
    "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
