add urban mix changes

--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -36,15 +36,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "57632393-7263-4167-bbbc-af3fdb18f181",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def eda():\n",
-    "    data_core_csv = pd.read_csv(URBAN_CORE_CSV, header=None) \n",
+    "def eda(file_name):\n",
+    "    df = pd.read_csv(URBAN_CORE_CSV, header=None) \n",
     "\n",
-    "    transposed_df = data_core_csv.transpose()\n",
+    "    transposed_df = df.transpose()\n",
     "\n",
     "    column_averages = transposed_df[7:].mean(axis=1).reset_index(drop=True)\n",
     "\n",
@@ -86,7 +86,8 @@
     }
    ],
    "source": [
-    "eda()"
+    "eda(URBAN_CORE_CSV)\n",
+    "eda(URBAN_MIX_CSV)"
    ]
   },
   {
