update eda jupyter notebook

--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "57632393-7263-4167-bbbc-af3fdb18f181",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "e39e5984-4e32-4bb5-bcb5-59a6df382e13",
    "metadata": {},
    "outputs": [
@@ -95,7 +95,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "max speed:  1220037300.0\n"
+      "max speed:  97.72000002\n"
      ]
     },
     {
@@ -119,7 +119,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "max speed:  3201504000.0\n"
+      "max speed:  127.0\n"
      ]
     },
     {
