--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "57632393-7263-4167-bbbc-af3fdb18f181",
    "metadata": {},
    "outputs": [],
@@ -45,10 +45,13 @@
     "    df = pd.read_csv(file_name, header=None) \n",
     "\n",
     "    max_speed = df.iloc[:, 7:].values.max()\n",
-    "    max_speed = df.iloc[:, 7:].values.mean()\n",
+    "    min_speed = df.iloc[:, 7:].values.min()\n",
+    "    avg = df.iloc[:, 7:].values.mean()\n",
     "    print(file_name)\n",
     "    print(\"max speed: \", max_speed)\n",
-    "    print(\"average speed: \", max_speed)\n",
+    "    print(\"average speed: \", avg)\n",
+    "    print(\"min speed: \", min_speed)\n",
+    "\n",
     "\n",
     "    transposed_df = df.transpose()\n",
     "\n",
@@ -84,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "e39e5984-4e32-4bb5-bcb5-59a6df382e13",
    "metadata": {},
    "outputs": [
@@ -100,8 +103,9 @@
      "output_type": "stream",
      "text": [
       "urban-core.csv\n",
-      "max speed:  27.628174201264457\n",
-      "average speed:  27.628174201264457\n"
+      "max speed:  97.72000002\n",
+      "average speed:  27.628174201264457\n",
+      "min speed:  1.0000000002\n"
      ]
     },
     {
@@ -126,8 +130,9 @@
      "output_type": "stream",
      "text": [
       "urban-mix.csv\n",
-      "max speed:  30.689051283406158\n",
-      "average speed:  30.689051283406158\n"
+      "max speed:  127.0\n",
+      "average speed:  30.689051283406158\n",
+      "min speed:  0.61\n"
      ]
     },
     {
